# cargo-xtask-workspace

./: .gitignore  Cargo.toml  README.md
crates/hello-world/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/src/cli/: commands.rs
