[package]
name = "xtask"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
tracing = { workspace = true, features = ["log"] }
